# ontologist

./: .dockerignore  .gitignore  Dockerfile  SKILL.md  neo-trust.yaml  pyproject.toml  specs.md
bank-statements/MBbank- mobile app/: Thumbs.db
docs/superpowers/plans/: 2026-04-09-fraud-pipeline.md  2026-04-09-neo-ontologist-agent.md
docs/superpowers/specs/: 2026-04-09-fraud-pipeline-design.md
extracted/: extracted_LN2501104785157.json  extracted_LN2501134790716.json
pipeline/: __init__.py  analyze.py  cli.py  config.yaml  evaluate.py  extract.py  graph.py  iterate.py  learn.py  models.py  report.py  rules.py  score.py  server.py  vision.py
pipeline/templates/: index.html
references/: cognitive-operations.md  discovery-patterns.md  drea-loop.md  heuristics.md  learnings.md  qa-protocol.md  workspace-structure.md
references/extraction-skills/: README.md
tests/: conftest.py  test_extract.py  test_models.py  test_report.py  test_rules.py  test_score.py  test_vision.py
workspaces/finance-and-banking/: CLAUDE.md  QA_REPORT.md  commitment-journal.yaml  iterations.tsv
workspaces/finance-and-banking/agents/: AGENTS.md
workspaces/finance-and-banking/agents/fraud-detector/: AGENT.md
workspaces/finance-and-banking/graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
workspaces/finance-and-banking/ontology/: INVENTORY.md  ONTOLOGY.md
workspaces/finance-and-banking/ontology/docs/: contradictions.md  gaps.md  patterns.md  usage-log.md
workspaces/finance-and-banking/sources/: mbbank-loan-packages.md
(+12 files in other folders)
